test/valid/MissingLeftParentheses/Nand.plume
/**
 * @author 35237, Marcos Vasco
 */
class Nand extends Object is
  
  method calculate : (val1 : Boolean, val2 : Boolean) -> Boolean is
    if val1 == true || val2 == true then false
    else true