test/invalid/SubtypingItself/SubtypingItself.plume
/**
 * Semantically incorrect class, in which a class extends itself
 * @author 35237, Marcos Vasco
 */
class SubtypingItself extends SubtypingItself is
  
  method calculate : (val1 : Boolean, val2 : Boolean) -> Boolean is
    if val1 == false || val2 == false then true
    else if val1 == true || val2 == true then true
    else false